[metadata]
name = WSocket
version = 1.3.8
description = HTTP and Websocket both supported wsgi server
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Ksengine/WSocket
author = Kavindu Santhusa
author_email = kavindusanthusa@gmail.com
license = MIT
license-file = LICENSE.txt
classifiers =
    'Intended Audience :: Developers'
    'Development Status :: 5 - Production/Stable'
    'Operating System :: OS Independent'
    'License :: OSI Approved :: MIT License'
    'Operating System :: MacOS :: MacOS X'
    'Operating System :: Microsoft :: Windows'
    'Operating System :: POSIX'
    'Programming Language :: Python'
    'Programming Language :: Python :: 2.7'
    'Programming Language :: Python :: 3.4'
    'Programming Language :: Python :: 3.5'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3'
platforms = any
project_urls = 
    Bug Tracker = https://github.com/Ksengine/WSocket/issues

